--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Veg Guide",
+  "name": "Veg Guide for Cambridge Guelph Kitchener and Waterloo",
   "icons": [
     {
       "src": "favicon.ico",
